# firestore_backup_extractor

./: backup.ksy  basic.proto  extract_documents_with_kaitai.py  fsbkup.py  pbmain.py  pyproject.toml
protopy/: basic_pb2.py
sample_backup/: 2025-12-26T19:39:13_77873.overall_export_metadata
sample_backup/all_namespaces/kind_debug/: all_namespaces_kind_debug.export_metadata  output-0
